#+STARTUP: showeverything

* Changelog

** 0.14

- Allow the associated/extra data of linesegments and intervals to
  differ when testing for intersections.
- Intersection testing between line segments and rectangles
- Removed proxy arguments to PlaneGraph and PlanarSubdivision

** 0.13

- Moved 'intersects' from the HasIntersectionWith class into a new
  class IsIntersectableWith. This allows separate (weaker) constraints
  for checking *if* geometries intersect rather than computing exact
  intersections.
- New BezierSpline features.
- "Zoom to fit" transformation.
- Many fixes related to PlaneGraph/PlanarSubdivison; i.e. bugs in
  which order the vertices/darts where reported when traversing a
  face. The polygon representing the outer boundary now is some area
  inside a bounding polygon.
- Fixed a bug in the DelaunayTriangulation.
- Preliminary implementations for updating planar subdivisions
  (e.g. subdividing edges).

** 0.12

- New website: https://hgeometry.org/
- Switch polygon implementation from a circular seq to a circular vector.
- Hide polygon implementation details.
- Enforce CCW polygon order by default.
- Fix bug in Data.Geometry.Polygon.Convex.extremes/maxInDirection.
- Fix bug in pointInPolygon in case of degenerate situations.
- Fix Read/Show instances for Point and Polygon such that 'read.show = id'.
- Improved numerical robustness.
- Random generation of monotone polygons. Thanks to @1ndy.
- Random and uniform generation of convex polygons.
- More IsIntersectableWith instances
- Updated Show/Read instances for LineSegments
- New algorithm: Visibility polygon in O(n log n) time.
- New algorithm: Earclip triangulation in O(n^2) time worst case, O(n)
  time expected case.
- New algorithm: Single-source shortest path in O(n) time.
- New algorithm: Planar point locator in O(log n) time.
- New algorithm: Point set diameter in O(n log n) time.
- New algorithm: Convex hull of a polygon in O(n) time.