@@ -8,6 +8,8 @@
   differ when testing for intersections.
 - Intersection testing between line segments and rectangles
 - Removed proxy arguments to PlaneGraph and PlanarSubdivision
+- Computing the OuterFaceDart in a PlaneGraph now only requires an ~Num r~
+  constraint rather than a ~Fractional r~ constraint.
 
 ** 0.13
 
